tests/baselines/reference/parserIndexSignature10.errors.txt
==== tests/cases/compiler/parserIndexSignature10.ts (1 errors) ====
    interface I {
       [a, b]: number
       ~
!!! parserIndexSignature10.ts(2,4): error TS1095: Index signature must have exactly one parameter.
    }